--- a/bootstrapfile.html
+++ b/bootstrapfile.html
@@ -235,7 +235,9 @@
                                         <label for="signUpEmail" class="form-label" id="email">Email address  <small class="text-danger">*</small></label>
                                         <input type="email" class="form-control" id="signUpEmail" placeholder="Enter your email">
                                     </div>
-                                    <button type="button" class="btn btn-secondary mt-4" id="verifyButton">Send OTP</button>
+                                    <button type="button" class="btn btn-secondary d-flex align-items-center justify-content-center flex-shrink-0 align-self-end" id="verifyButton">
+                                        Send OTP
+                                    </button>
                                 </div>
                                 <!-- OTP Input Boxes with Timer -->
                                 <div class="mb-3" id="otpContainer" style="display: none;">
