--- a/bootstrapfile.html
+++ b/bootstrapfile.html
@@ -206,7 +206,7 @@
                             <form>
                                 <div class="mb-3">
                                     <label for="signInEmail" class="form-label">Email address</label>
-                                    <input type="text" class="form-control" id="signInEmail" placeholder="Enter your email">
+                                    <input type="Email" class="form-control" id="signInEmail" placeholder="Enter your email">
                                 </div>
                                 <div class="mb-3 ">
                                     <label for="signInPassword" class="form-label">Password</label>
